# OPD_Lines

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Lines.xmind  Makefile  RoadMap игры Lines.xlsx  cmake_install.cmake  Спецификация игры Lines.docx
main/: CMakeLists.txt  Makefile  ball.cpp  ball.h  cmake_install.cmake  field.cpp  field.h  findPath.cpp  findPath.h  gameconst.h  gamefunctions.cpp  gamefunctions.h  gamescene.h  main.cpp  utils.cpp  utils.h
